Changes on Vercel

--- a/src/vercel.json
+++ b/src/vercel.json
@@ -1,6 +1,20 @@
-{ 
-  "REWRITES": [{ 
-    "SOURCE": "/(.*)", 
-    "DESTINATION": "/" 
-  }] 
-}
+{
+    "rewrites": [
+        {
+            "source": "/login",
+            "destination": "/login"
+          },
+      {
+        "source": "/signup",
+        "destination": "/signup"
+      },
+      {
+        "source": "/course",
+        "destination": "/course"
+      },
+      {
+        "source": "/(.*)",
+        "destination": "/"
+      }
+    ]
+  }
